# dls

./: .gitignore  .hgignore  AUTHORS  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  README.windows  TODO  bootstrap.sh  com_base64.cpp  com_base64.hpp  com_channel_preset.cpp  com_channel_preset.hpp  com_compression_t.hpp  com_dialog_msg.cpp  com_dialog_msg.hpp  com_exception.hpp  com_file.cpp  com_file.hpp  com_globals.cpp  com_globals.hpp  com_index_t.hpp  com_job_preset.cpp  com_job_preset.hpp  com_mdct_t.hpp  com_quant_t.hpp  com_real_channel.cpp  com_real_channel.hpp  com_ring_buffer_t.hpp  com_time.cpp  com_time.hpp  com_xml_parser.cpp  com_xml_parser.hpp  com_xml_tag.cpp  com_xml_tag.hpp  com_zlib.cpp  (+71 more)
daemon/: Connection.cpp  Connection.h  Job.cpp  Job.h  JobPreset.cpp  JobPreset.h  Logger.cpp  Logger.h  Makefile.am  Message.cpp  Message.h  MessageList.cpp  MessageList.h  ProcLogger.cpp  ProcLogger.h  ProcMother.cpp  ProcMother.h  SaverGenT.h  SaverMetaT.h  SaverT.h  globals.cpp  globals.h  main.cpp
doku/: Makefile  README  dls_doku.tex  dls_doku_en.tex  dls_doku_fr.tex  hg.tex  update-hg.sh
doku/bilder/: arch.eps  arch.fig  arch_en.eps  arch_en.fig  arch_fr.eps  arch_fr.fig  ctl_add_en.eps  ctl_change_en.eps  ctl_channel_en.eps  ctl_edit_en.eps  ctl_main_en.eps  dls_data_en.eps  dls_data_en.fig  dls_data_fr.eps  dls_data_fr.fig  dls_data_index_en.eps  dls_data_index_en.fig  dls_data_index_fr.eps  dls_data_index_fr.fig  dls_data_index_glob_en.eps  dls_data_index_glob_en.fig  dls_data_index_glob_fr.eps  dls_data_index_glob_fr.fig  dls_data_index_msg_en.eps  dls_data_index_msg_en.fig  dls_data_index_msg_fr.eps  dls_data_index_msg_fr.fig  mdct_en.eps  mdct_en.fig  mdct_fr.eps  mdct_fr.fig  quota_en.eps  quota_en.fig  quota_fr.eps  quota_fr.fig  view_export_en.eps
fltkguis/: CtlDialogChannel.cpp  CtlDialogChannel.h  CtlDialogChannels.cpp  CtlDialogChannels.h  CtlDialogJob.cpp  CtlDialogJob.h  CtlDialogJobEdit.cpp  CtlDialogJobEdit.h  CtlDialogMain.cpp  CtlDialogMain.h  CtlDialogMsg.cpp  CtlDialogMsg.h  CtlGlobals.h  CtlJobPreset.cpp  CtlJobPreset.h  CtlMain.cpp  Makefile.am  ViewChannel.cpp  ViewChannel.h  ViewDialogExport.cpp  ViewDialogExport.h  ViewDialogMain.cpp  ViewDialogMain.h  ViewGlobals.h  ViewMain.cpp  ViewViewData.cpp  ViewViewData.h  ViewViewMsg.cpp  ViewViewMsg.h  fl_grid.cpp  fl_grid.h  fl_track_bar.cpp  fl_track_bar.h
fltkguis/images/: Makefile.am
gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  LogWindow.cpp  LogWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  UriDialog.cpp  UriDialog.h  dlsgui.pro  dlsgui.qrc  dlsgui_de.ts  dlsgui_fr.ts  main.cpp
json/: Data.cpp  ErrorCodes.cpp  ErrorCodes.h  List.cpp  Makefile.am  README  TODO  dlsjson  exFetch.json  exFetchAll.json  exList.json  exListJob.json  main.cpp
lib/: Base64.cpp  Base64.h  BaseMessage.cpp  BaseMessage.h  BaseMessageList.cpp  BaseMessageList.h  Channel.cpp  ChannelPreset.cpp  ChannelPreset.h  Chunk.cpp  Chunk.h  CompressionT.h  Data.cpp  Data.h  Dir.cpp  Dir.h  Export.cpp  Export.h  File.cpp  File.h  IndexT.h  Job.cpp  Job.h  JobPreset.cpp  Makefile.am  MdctT.h  QuantT.h  RingBufferT.h  Time.cpp  XmlParser.cpp  XmlParser.h  XmlTag.cpp  XmlTag.h  ZLib.cpp  ZLib.h  globals.cpp  globals.h  mdct.cpp  mdct.h
lib/LibDLS/: Channel.h  ChannelPreset.h  Chunk.h  Data.h  Dir.h  Exception.h  Export.h  Job.h  JobPreset.h  Makefile.am  Time.h  globals.h
m4/: pdcom.m4
proto/: Makefile.am  dls.proto  dlsd.pb.cc  dlsd.pb.h  dlsd.proto
script/: Makefile.am  dls.pl  dls.service.in  dls_quota.pl  dls_status.pl  dlsd.service.in  dlsprofile.sh  init.sh  init.sh.in  install.sh  profile.sh  rcdls.sh  sysconfig
src/: Makefile  Makefile.am  cmd_export.cpp  cmd_list.cpp  cmd_main.cpp  com_base64.cpp  com_base64.hpp  com_channel_preset.cpp  com_channel_preset.hpp  com_compression_t.hpp  com_exception.hpp  com_file.cpp  com_file.hpp  com_globals.cpp  com_globals.hpp  com_index_t.hpp  com_job_preset.cpp  com_job_preset.hpp  com_mdct_t.hpp  com_quant_t.hpp  com_ring_buffer_t.hpp  com_time.cpp  com_time.hpp  com_xml_parser.cpp  com_xml_parser.hpp  com_xml_tag.cpp  com_xml_tag.hpp  com_zlib.cpp  com_zlib.hpp  ctl_dialog_channel.cpp  ctl_dialog_channel.hpp  ctl_dialog_channels.cpp  ctl_dialog_channels.hpp  ctl_dialog_job.cpp  ctl_dialog_job.hpp  ctl_dialog_job_edit.cpp  ctl_dialog_job_edit.hpp  ctl_dialog_main.cpp  ctl_dialog_main.hpp  ctl_dialog_msg.cpp  (+62 more)
tool/: Export.cpp  Index.cpp  List.cpp  Makefile.am  main.cpp
widgets/: Channel.cpp  Channel.h  ColorDelegate.cpp  ColorDelegate.h  ColorListEditor.cpp  ColorListEditor.h  DatePickerDialog.cpp  DatePickerDialog.h  Dir.cpp  Dir.h  DlsWidgets.pro  DlsWidgets.qrc  DlsWidgets_de.ts  DlsWidgets_fr.ts  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  FilterDialog.ui  Graph.cpp  Graph.h  Job.cpp  Job.h  Layer.cpp  Layer.h  Model.cpp  Model.h  Node.cpp  Node.h  Plugin.cpp  Plugin.h  Scale.cpp  Scale.h  Section.cpp  Section.h  SectionDialog.cpp  SectionDialog.h  SectionDialog.ui  SectionModel.cpp  SectionModel.h  TODO  (+5 more)
widgets/DlsWidgets/: Graph.h  Layer.h  Model.h  Scale.h  Section.h  Translator.h  ValueScale.h
www/: LITERATURE  TODO  ajax.html  dlsplot.js  graph1.html
www/libs/flotr2/: flotr2.js
www/libs/jquery/css/: jquery-ui.css
